syntax = "proto3";
package api;

message NestFormula {
  oneof elements {
    int32 mono = 1;
    PolyFormula poly = 2;
  }
}

message PolyFormula {
  string op_string = 1;
  repeated NestFormula nest_formulas = 2;
}